<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2017 Jonatan Cheiro Anriquez
  ~
  ~ This file is part of Block Calls.
  ~
  ~ Block Calls is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ Block Calls is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with Block Calls. If not, see <http://www.gnu.org/licenses/>.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">


    <PreferenceCategory
        android:persistent="false"
        android:title="@string/pref_cat_blocking_status">
        <CheckBoxPreference
            android:key="blocking_enabled"
            android:summary="@string/pref_blocking_enable_summary"
            android:title="@string/pref_blocking_enable"/>
    </PreferenceCategory>

    <PreferenceCategory
        android:dependency="blocking_enabled"
        android:persistent="false"
        android:title="@string/pref_cat_blocking_methods">

        <CheckBoxPreference
            android:key="enable_black_list_key"
            android:summary="@string/pref_blacklist_summary"
            android:title="@string/pref_blacklist"/>

        <CheckBoxPreference
            android:key="allow_only_contacts_key"
            android:summary="@string/pref_contacts_only_summary"
            android:title="@string/pref_contacts_only"/>

        <CheckBoxPreference
            android:key="block_private_numbers_key"
            android:summary="@string/pref_private_number_summary"
            android:title="@string/pref_private_number"/>

    </PreferenceCategory>

    <PreferenceCategory
        android:dependency="blocking_enabled"
        android:persistent="false"
        android:title="@string/pref_title_log">
        <CheckBoxPreference
            android:key="enable_log_key"
            android:summary="@string/pref_log_summary"
            android:title="@string/pref_log"/>
    </PreferenceCategory>

    <PreferenceCategory
        android:dependency="blocking_enabled"
        android:persistent="false"
        android:title="@string/pref_title_notification">
        <CheckBoxPreference
            android:key="notification_blocked_call"
            android:summary="@string/pref_not_status_bar_summary"
            android:title="@string/pref_not_status_bar"/>
    </PreferenceCategory>

</PreferenceScreen>