<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2017 Jonatan Cheiro Anriquez
  ~
  ~ This file is part of Block Calls.
  ~
  ~ Block Calls is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ Block Calls is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with Block Calls. If not, see <http://www.gnu.org/licenses/>.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/blackListMnDeleteAll"
        android:icon="@android:drawable/ic_menu_preferences"
        android:title="@string/blacklist_menu_item_delete_all"
        app:showAsAction="never"/>
    <item
        android:id="@+id/blackListMnExport"
        android:icon="@android:drawable/ic_menu_preferences"
        android:title="@string/blacklist_menu_item_export"
        app:showAsAction="never"/>
    <item
        android:id="@+id/blackListMnImport"
        android:icon="@android:drawable/ic_menu_preferences"
        android:title="@string/blacklist_menu_item_import"
        app:showAsAction="never"/>

</menu>