<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2017 Jonatan Cheiro Anriquez
  ~
  ~ This file is part of Block Calls.
  ~
  ~ Block Calls is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ Block Calls is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with Block Calls. If not, see <http://www.gnu.org/licenses/>.
  -->

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fadeScrollbars="false"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:scrollbarStyle="outsideInset">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/inner_margin"
            android:text="Terms and Conditions"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/inner_margin"
            android:layout_marginTop="@dimen/paragraph_margin"
            android:text="Term and Conditions"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/terms_and_conditions_tac_text"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/inner_margin"
            android:layout_marginTop="@dimen/paragraph_margin"
            android:text="Exclusion of Liability"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/terms_and_conditions_eol_text"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/inner_margin"
            android:layout_marginTop="@dimen/paragraph_margin"
            android:text="Indemnification"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/terms_and_conditions_i_text"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lines="2"
            android:text="|"
            android:visibility="invisible"
            tools:ignore="HardcodedText"/>

    </LinearLayout>
</ScrollView>
